# Portfolio2024

./: .env  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0002_initial.py  0003_post_tags.py
home/: urls.py
pages/: urls.py  views.py
portfolio_proj/: settings.py  urls.py
templates/: base.html  contact.html  home.html  projects.html  resume.html  signup.html
templates/blog/: post.html
templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
templates/registration/: login.html
users/: admin.py
users/migrations/: 0001_initial.py
