[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["MongushAB"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-taggit = "^6.1.0"
markdown = "^3.7"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
django-crispy-forms = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
